# my-app/models/userModel.go
@@ -1,0 +1,9 @@
+package models
+
+import "gorm.io/gorm"
+
+type Users struct {
+	gorm.Model
+	Email    string `gorm:"unique"`
+	Password string
+}
